--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body background="background.jpg">
 <center>
-  <h3 class="btn btn-info">Realtime Filter</h3>
+  <h3 class="btn btn-info">Realtime Filter - Clown Nose</h3>
   <br>
   <br>
   <button onclick="take_snapshot()" class="btn btn-success">Take Snapshot</button>
